tests/errors/syntax/019.err
[1m[0;31merror: [0monly declarations are allowed at top level
  [1m[34m-->[0m src/tests/errors/syntax/019.ura:6:5
  [1m[34m|[0m
[1m[34m6 |[0m     GREEN
  [1m[34m|[0m     [1;31m^^^^^[0m
